Add update user info gRPC API.
